add creating collections and inserting to them for postgres an mongo